--- a/1/index.html
+++ b/1/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexbox 중앙 정렬 예제</title>
+    <title></title>
     <style>
         @import url(./main.css);
     </style>
 </head>
 <body>
     <div id="centered-text">
-        <span id="student-info">학번 이름</span>
-    </div>
+        <span id="student-info">202358017 배정서</span>
+    </div> 
 
     <script type="module">
         import main from '/.index.js'
