--- a/1/index.html
+++ b/1/index.html
@@ -9,9 +9,7 @@
     </style>
 </head>
 <body>
-    <div id="centered-text">
-        <span id="student-info">202358017 배정서</span>
-    </div> 
+    <div id="title"> 202358017 배정서 </div>
 
     <script type="module">
         import main from '/.index.js'
